[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu_margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="menu_container" type="VBoxContainer" parent="menu_margin"]
margin_left = 472.0
margin_top = 257.0
margin_right = 552.0
margin_bottom = 343.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="menu_game_title" type="Label" parent="menu_margin/menu_container"]
margin_left = 13.0
margin_right = 67.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "thresher"
align = 1

[node name="menu_buttons" type="VBoxContainer" parent="menu_margin/menu_container"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 86.0

[node name="start_game_btn" type="Button" parent="menu_margin/menu_container/menu_buttons"]
margin_right = 80.0
margin_bottom = 20.0
text = "start game"
flat = true

[node name="options_game_btn" type="Button" parent="menu_margin/menu_container/menu_buttons"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0
text = "options"
flat = true

[node name="quit_game_btn" type="Button" parent="menu_margin/menu_container/menu_buttons"]
margin_top = 48.0
margin_right = 80.0
margin_bottom = 68.0
text = "quit"
flat = true
